--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
-    <title>PULSE | RESPONSIVE ACADEMIC PERSONAL VCARD TEMPLATE</title>
+    <title>FRANCK DEMOUTE | Développeur Full-Stack</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="">
@@ -22,8 +22,8 @@
 
     <!-- CSS | Google Fonts -->
 
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:200,400,300,500,600' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:200,400,300,500,600' rel='stylesheet' type='text/css'>
 
     <noscript>
         <style>
@@ -47,8 +47,8 @@
         <!-- Sidebar-->
         <div class="aside1">
             <a class="contact-button"><i class="fa fa-paper-plane"></i></a>
-            <a class="download-button"><i class="fa fa-cloud-download"></i></a>
-            <div class="aside-content"><span class="part1">PULSE</span><span class="part2">Academic Personal Vcard</span>
+            <a class="download-button" href="https://stackoverflow.com/story/zenoo" target="_blank" title="Developer Story"><i class="fa fa-cloud-download"></i></a>
+            <div class="aside-content"><span class="part1">FRANCK DEMOUTE</span><span class="part2">Développeur Full-Stack</span>
             </div>
         </div>
         <aside class="hs-menu" id="hs-menu">
@@ -57,14 +57,14 @@
             <!-- Profil Image-->
             <div class="hs-headline">
                 <a id="my-link" href="#my-panel"><i class="fa fa-bars"></i></a>
-                <a href="#" class="download"><i class="fa fa-cloud-download"></i></a>
+                <a class="download" href="https://stackoverflow.com/story/zenoo" target="_blank" title="Developer Story"><i class="fa fa-cloud-download"></i></a>
                 <div class="img-wrap">
                     <img src="images/portrait.jpg" alt="" width="150" height="150" />
                 </div>
                 <div class="profile_info">
-                    <h1>Johnny smith</h1>
-                    <h4>PhD Computer Science</h4>
-                    <h6><span class="fa fa-location-arrow"></span>&nbsp;&nbsp;&nbsp;San Francisco , CA</h6>
+                    <h1>Franck Demoute</h1>
+                    <h4>Développeur Full-Stack</h4>
+                    <h6><span class="fa fa-location-arrow"></span>&nbsp;&nbsp;&nbsp;La Rochelle, FR</h6>
                 </div>
                 <div style="clear:both"></div>
             </div>
@@ -73,23 +73,19 @@
 
             <!-- menu -->
             <nav>
-                <a href="#section1"><span class="menu_name">ABOUT</span><span class="fa fa-home"></span> </a>
-                <a href="#section2"><span class="menu_name">RESUME</span><span class="fa fa-newspaper-o"></span> </a>
-                <a href="#section3"><span class="menu_name">PUBLICATIONS</span><span class="fa fa-pencil"></span> </a>
-                <a href="#section4"><span class="menu_name">RESEARCH</span><span class="fa fa-flask"></span> </a>
-                <a href="#section5"><span class="menu_name">TEACHING</span><span class="fa fa-book"></span> </a>
-                <a href="#section6"><span class="menu_name">SKILLS</span><span class="fa fa-diamond"></span> </a>
-                <a href="#section7"><span class="menu_name">WORKS</span><span class="fa fa-archive"></span> </a>
+                <a href="#section1"><span class="menu_name">À PROPOS</span><span class="fa fa-home"></span> </a>
+                <a href="#section2"><span class="menu_name">CV</span><span class="fa fa-newspaper-o"></span> </a>
+                <a href="#section3"><span class="menu_name">ACTUALITÉS</span><span class="fa fa-pencil"></span> </a>
+                <a href="#section6"><span class="menu_name">COMPÉTENCES</span><span class="fa fa-diamond"></span> </a>
+                <a href="#section7"><span class="menu_name">RÉALISATIONS</span><span class="fa fa-archive"></span> </a>
                 <a href="#section8"><span class="menu_name">CONTACT</span><span class="fa fa-paper-plane"></span> </a>
             </nav>
             <!-- end menu-->
             <!-- social icons -->
             <div class="aside-footer">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <a href="#"><i class="fa fa fa-dribbble"></i></a>
-                <a href="#"><i class="fa fa fa-github"></i></a>
+                <a href="https://zenoo.fr" title="Zenoo.fr" target="_blank"><i class="fa fa-globe"></i></a>
+                <a href="https://github.com/Zenoo" title="Github" target="_blank"><i class="fa fa-github"></i></a>
+                <a href="https://stackoverflow.com/users/3660134/zenoo" title="Stackoverflow" target="_blank"><i class="fa fa-stack-overflow"></i></a>
             </div>
             <!-- end social icons -->
         </aside>
@@ -112,7 +108,7 @@
                     </div>
                     <!-- News scroll -->
                     <div class="news-scroll">
-                        <span><i class="fa fa-line-chart"></i>RECENT ACTIVITY : </span>
+                        <span><i class="fa fa-line-chart"></i>News : </span>
                         <ul id="marquee" class="marquee">
                             <li>
                                 Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Fusce tincidunt adipiscing,massa. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos. Fusce tincidunt adipiscing,massa.</li>
@@ -145,8 +141,8 @@
                     <span class="sec-icon fa fa-home"></span>
                     <div class="hs-inner">
                         <span class="before-title">.01</span>
-                        <h2>ABOUT</h2>
-                        <span class="content-title">PERSONAL DETAILS</span>
+                        <h2>À PROPOS</h2>
+                        <span class="content-title">EN BREF</span>
                         <div class="aboutInfo-contanier">
                             <div class="about-card">
                                 <div class="face2 card-face">
@@ -154,7 +150,7 @@
                                         <div id="google-container"></div>
                                         <div id="cd-zoom-in"></div>
                                         <div id="cd-zoom-out"></div>
-                                        <address>8690 Paul Street, San fransico</address>
+                                        <address>La Rochelle</address>
                                         <div class="back-cover" data-card-back="data-card-back"><i class="fa fa-long-arrow-left"></i>
                                         </div>
                                     </div>
@@ -164,25 +160,25 @@
                                         <a class="map-location" data-card-front="data-card-front"><img src="images/map-icon.png" alt="">
                                         </a>
                                         <div class="about-details">
-                                            <div><span class="fa fa-inbox"></span><span class="detail">Yourmail@mail.com</span>
+                                            <div><span class="fa fa-inbox"></span><span class="detail">pro@franckdemoute.fr</span>
                                             </div>
-                                            <div><span class="fa fa-phone"></span><span class="detail">00 123 456 789</span>
+                                            <div><span class="fa fa-phone"></span><span class="detail">06 72 35 21 77</span>
                                             </div>
                                         </div>
 
                                         <div class="cover-content-wrapper">
-                                            <span class="about-description">Hello. I am a<span class="rw-words">
-                                                <span><strong>Designer</strong></span>
-                                            <span><strong>Researcher</strong></span>
-                                            <span><strong>Programmer</strong></span>
-                                            <span><strong>Dreamer</strong></span>
-                                            <span><strong>Leader</strong></span>
+                                            <span class="about-description">Bonjour. Je suis <span class="rw-words">
+                                                <span><strong>un développeur</strong></span>
+                                            <span><strong>inventif</strong></span>
+                                            <span><strong>curieux</strong></span>
+                                            <span><strong>appliqué</strong></span>
+                                            <span><strong>à l'écoute</strong></span>
                                             </span>
-                                            <br>I am passionate about programming and coding
-                                            <br>Welcome to my Personal and Academic profile</span>
+                                            <br>Le développement, c'est ma passion.
+                                            <br>Bienvenue sur mon profil professionnel</span>
                                             <span class="status">
                                             <span class="fa fa-circle"></span>
-                                            <span class="text">Available as <strong>freelance</strong></span>
+                                            <span class="text">Disponible</span>
                                             </span>
                                         </div>
                                     </div>
@@ -195,23 +191,23 @@
                                             <a href="#bio" data-toggle="tab">Bio</a>
                                         </li>
                                         <li>
-                                            <a href="#hobbies" data-toggle="tab">Hobbies</a>
+                                            <a href="#hobbies" data-toggle="tab">Loisirs</a>
                                         </li>
                                         <li>
-                                            <a href="#facts" data-toggle="tab">Facts</a>
+                                            <a href="#facts" data-toggle="tab">Stats</a>
                                         </li>
                                     </ul>
                                     <div id="myTabContent" class="tab-content">
 
                                         <div class="tab-pane fade in active" id="bio">
                                             <h3>BIO</h3>
-                                            <h4>ABOUT ME</h4>
+                                            <h4>À PROPOS DE MOI</h4>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivam sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo.Lorem ipsum dolor sit amet, consectetur adipiscingVivam sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo.Lorem ipsum dolor sit amet, consectetur adipiscingVivam sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo.</p>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivam sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo.Lorem ipsum dolor sit amet, consectetur adipiscingVivam sit amet ligula non .</p>
                                         </div>
                                         <div class="tab-pane fade" id="hobbies">
-                                            <h3>HOBBIES</h3>
-                                            <h4>INTERESTS</h4>
+                                            <h3>LOISIRS</h3>
+                                            <h4>INTÉRÊTS</h4>
                                             <div class="hobbie-wrapper row">
                                                 <div class="hobbie-icon col-md-3"><i class="li_lab"></i>
                                                 </div>
@@ -248,8 +244,8 @@
                                             <div style="clear:both;"></div>
                                         </div>
                                         <div class="tab-pane fade" id="facts">
-                                            <h3>FACTS</h3>
-                                            <h4>NUMBERS ABOUT ME</h4>
+                                            <h3>STATS</h3>
+                                            <h4>MOI, EN NOMBRES</h4>
                                             <div class="facts-wrapper col-md-6">
                                                 <div class="facts-icon"><i class=" li_cup"></i>
                                                 </div>
@@ -302,29 +298,27 @@
                     <span class="sec-icon fa fa-newspaper-o"></span>
                     <div class="hs-inner">
                         <span class="before-title">.02</span>
-                        <h2>RESUME</h2>
+                        <h2>CV</h2>
                         <!-- Resume Wrapper -->
                         <div class="resume-wrapper">
                             <ul class="resume">
                                 <!-- Resume timeline -->
                                 <li class="time-label">
-                                    <span class="content-title">EDUCATION</span>
+                                    <span class="content-title">ÉDUCATION</span>
                                 </li>
                                 <li>
                                     <div class="resume-tag">
                                         <span class="fa fa-graduation-cap"></span>
                                         <div class="resume-date">
-                                            <span>2008</span>
-                                            <div class="separator"></div>
-                                            <span>2010</span>
+                                            <span>2012</span>
                                         </div>
                                     </div>
                                     <div class="timeline-item">
-                                        <span class="timeline-location"><i class="fa fa-map-marker"></i>San fransico</span>
-                                        <h3 class="timeline-header">COMPUTER ENGINEERING - PHD</h3>
+                                        <span class="timeline-location"><i class="fa fa-map-marker"></i>Bretagne</span>
+                                        <h3 class="timeline-header">BAC S</h3>
                                         <div class="timeline-body">
-                                            <h4>UNIVERSITY OF CALIFORNIA</h4>
-                                            <span>Lorem ipsum dolor sit amet, consectetur adipiscingVivam sit amet ligula non lectus cursus egestas. Cras erat lorem.</span>
+                                            <h4>LYCÉE JEAN BRITO</h4>
+                                            <span>Fin du parcours général pour enfin rentrer dans les spécialités du métier que j'ai choisi très jeune.											</span>
                                         </div>
                                     </div>
                                 </li>
@@ -332,22 +326,40 @@
                                     <div class="resume-tag">
                                         <span class="fa fa-graduation-cap"></span>
                                         <div class="resume-date">
-                                            <span>2004</span>
+                                            <span>2013</span>
                                             <div class="separator"></div>
-                                            <span>2008</span>
+                                            <span>2016</span>
                                         </div>
                                     </div>
                                     <div class="timeline-item">
-                                        <span class="timeline-location"><i class="fa fa-map-marker"></i>San fransico</span>
-                                        <h3 class="timeline-header">ELECTRONICS ENGINEERING</h3>
+                                        <span class="timeline-location"><i class="fa fa-map-marker"></i>La Rochelle</span>
+                                        <h3 class="timeline-header">LICENCE INFORMATIQUE</h3>
                                         <div class="timeline-body">
-                                            <h4>UNIVERSITY OF CALIFORNIA</h4>
-                                            <span>Lorem ipsum dolor sit amet, consectetur adipiscingVivam sit amet ligula non lectus cursus egestas. Cras erat lorem.</span>
+                                            <h4>UNIVERSITÉ DE LA ROCHELLE</h4>
+                                            <span>2 années d'apprentissage en développement logiciel, qui m'ont redirigé vers un développement Web.</span>
+                                        </div>
+                                    </div>
+								</li>
+								<li>
+                                    <div class="resume-tag">
+                                        <span class="fa fa-graduation-cap"></span>
+                                        <div class="resume-date">
+                                            <span>2016</span>
+                                            <div class="separator"></div>
+                                            <span>2017</span>
+                                        </div>
+                                    </div>
+                                    <div class="timeline-item">
+                                        <span class="timeline-location"><i class="fa fa-map-marker"></i>La Rochelle</span>
+                                        <h3 class="timeline-header">LICENCE PRO CRÉATION MULTIMÉDIA</h3>
+                                        <div class="timeline-body">
+                                            <h4>UNIVERSITÉ DE LA ROCHELLE</h4>
+                                            <span>L'année qui m'aura apporté le plus de connaissances utiles à mes projets de travail</span>
                                         </div>
                                     </div>
                                 </li>
                                 <li class="time-label">
-                                    <span class="content-title">ACADEMIC AND PROFESSIONAL POSITIONS</span>
+                                    <span class="content-title">EXPÉRIENCE</span>
                                 </li>
                                 <li>
                                     <div class="resume-tag">
