Biard project description

--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@
 												</div>
 												<div class="hobbie-description col-md-9">
 
-													<p>J'aime découvrir les nouvelles technologies du Web et adapter mes anciens projets avec ces nouvelles possibilités.</p>
+													<p>J'aime découvrir les nouvelles technologies du Web et adapter mes
+														anciens projets avec ces nouvelles possibilités.</p>
 												</div>
 												<div style="clear:both;"></div>
 											</div>
@@ -270,7 +271,8 @@
 												</div>
 												<div class="hobbie-description col-md-9">
 
-													<p>Je développe plusieurs projets dans mon temps libre, chacun avec un besoin différent.</p>
+													<p>Je développe plusieurs projets dans mon temps libre, chacun avec
+														un besoin différent.</p>
 												</div>
 											</div>
 											<div class="hobbie-wrapper row">
@@ -278,7 +280,8 @@
 												</div>
 												<div class="hobbie-description col-md-9">
 
-													<p>La musique fait partie intégrante de ma vie de développeur. Elle m'accompagne au moins 10h par jour.</p>
+													<p>La musique fait partie intégrante de ma vie de développeur. Elle
+														m'accompagne au moins 10h par jour.</p>
 												</div>
 											</div>
 											<div style="clear:both;"></div>
@@ -1351,9 +1354,9 @@
 							<figure class="effect-milo">
 								<img src="http://placehold.it/280x222" alt="img11" width="282" height="222" />
 								<figcaption>
-									<span class="label">Logo Design</span>
+									<span class="label">Design integration</span>
 									<div class="portfolio_button">
-										<h3>Project Title</h3>
+										<h3>Biard Déménagements</h3>
 										<a href=".work1" class="open_popup" data-effect="mfp-zoom-out">
 											<i class="hovicon effect-9 sub-b"><i class="fa fa-search"></i></i>
 										</a>
@@ -1367,22 +1370,18 @@
 										</div>
 										<div class="col-md-6">
 											<div class="project_content">
-												<h2 class="project_title">Project title</h2>
-												<p class="project_desc">Lorem ipsum dolor sit amet, consectetur
-													adipiscing elit. Fusce a auctor sem. Suspendisse egestas nulla eget
-													nunc commodo, et blandit ante tristique. Aliquam dignissim nulla
-													tellus, sed pellentesque libero pellentesque et. Donec nec sem
-													mattis, suscipit ligula id, porttitor tortor. Maecenas sed egestas
-													odio, vitae euismod nulla. Duis viverra blandit mi quis rhoncus.
-													Aenean vitae turpis et tortor elementum blandit.
+												<h2 class="project_title">Biard Déménagements</h2>
+												<p class="project_desc">J'ai dirigé dans son intégralité l'intégration
+													de la refonte graphique du site <a
+														href="https://biard-demenagements.fr"
+														target="_blank">biard-demenagements.fr</a>.
 													<br>
-													<br>dignissim nulla tellus, sed pellentesque libero pellentesque et.
-													Donec nec sem mattis, suscipit ligula id, porttitor tortor. Maecenas
-													sed egestas odio, vitae euismod nulla. Duis viverra blandit mi quis
-													rhoncus. Aenean vitae turpis et tortor elementum blandit.</p>
+													<br>Ce projet m'a appris à travailler en collaboration avec une
+													agence de design, et à perfectionner mes méthodes de référencement
+													SEO.</p>
 											</div>
 										</div>
-										<a class="ext_link" href="#"><i class="fa fa-external-link"></i></a>
+										<a class="ext_link" href="https://biard-demenagements.fr" target="_blank"><i class="fa fa-external-link"></i></a>
 										<div style="clear:both"></div>
 									</div>
 								</figcaption>
