Finished projects text

--- a/index.html
+++ b/index.html
@@ -1354,7 +1354,7 @@
 							<figure class="effect-milo">
 								<img src="http://placehold.it/280x222" alt="img11" width="282" height="222" />
 								<figcaption>
-									<span class="label">Design integration</span>
+									<span class="label">Design Integration</span>
 									<div class="portfolio_button">
 										<h3>Biard Déménagements</h3>
 										<a href=".work1" class="open_popup" data-effect="mfp-zoom-out">
@@ -1381,7 +1381,8 @@
 													SEO.</p>
 											</div>
 										</div>
-										<a class="ext_link" href="https://biard-demenagements.fr" target="_blank"><i class="fa fa-external-link"></i></a>
+										<a class="ext_link" href="https://biard-demenagements.fr" target="_blank"><i
+												class="fa fa-external-link"></i></a>
 										<div style="clear:both"></div>
 									</div>
 								</figcaption>
@@ -1392,9 +1393,9 @@
 							<figure class="effect-milo">
 								<img src="http://placehold.it/280x222" alt="img11" width="282" height="222" />
 								<figcaption>
-									<span class="label">web design</span>
+									<span class="label">Web Application</span>
 									<div class="portfolio_button">
-										<h3>Project Title</h3>
+										<h3>QuizConex</h3>
 										<a href=".work2" class="open_popup" data-effect="mfp-zoom-out">
 											<i class="hovicon effect-9 sub-b"><i class="fa fa-search"></i></i>
 										</a>
@@ -1408,22 +1409,18 @@
 										</div>
 										<div class="col-md-6">
 											<div class="project_content">
-												<h2 class="project_title">Project title</h2>
-												<p class="project_desc">Lorem ipsum dolor sit amet, consectetur
-													adipiscing elit. Fusce a auctor sem. Suspendisse egestas nulla eget
-													nunc commodo, et blandit ante tristique. Aliquam dignissim nulla
-													tellus, sed pellentesque libero pellentesque et. Donec nec sem
-													mattis, suscipit ligula id, porttitor tortor. Maecenas sed egestas
-													odio, vitae euismod nulla. Duis viverra blandit mi quis rhoncus.
-													Aenean vitae turpis et tortor elementum blandit.
+												<h2 class="project_title">QuizConex</h2>
+												<p class="project_desc">La création de cette PWA <i>(Progressive Web
+														App)</i> a duré 1 mois.
 													<br>
-													<br>dignissim nulla tellus, sed pellentesque libero pellentesque et.
-													Donec nec sem mattis, suscipit ligula id, porttitor tortor. Maecenas
-													sed egestas odio, vitae euismod nulla. Duis viverra blandit mi quis
-													rhoncus. Aenean vitae turpis et tortor elementum blandit.</p>
+													<br>De la conception de l'idée générale à l'intégration de modules
+													supplémentaires tels que les logins externes, la création d'un mode
+													Versus, mener ce projet à son terme m'a permis d'approfondir mes
+													connaissances sur les PWA et les ServiceWorkers.</p>
 											</div>
 										</div>
-										<a class="ext_link" href="#"><i class="fa fa-external-link"></i></a>
+										<a class="ext_link" href="https://quizzconex.fr" target="_blank"><i
+												class="fa fa-external-link"></i></a>
 										<div style="clear:both"></div>
 									</div>
 								</figcaption>
@@ -1434,9 +1431,9 @@
 							<figure class="effect-milo">
 								<img src="http://placehold.it/280x222" alt="img11" width="282" height="222" />
 								<figcaption>
-									<span class="label">Mobile app</span>
+									<span class="label">Website</span>
 									<div class="portfolio_button">
-										<h3>Project Title</h3>
+										<h3>Obcom.fr</h3>
 										<a href=".work3" class="open_popup" data-effect="mfp-zoom-out">
 											<i class="hovicon effect-9 sub-b"><i class="fa fa-search"></i></i>
 										</a>
@@ -1450,23 +1447,18 @@
 										</div>
 										<div class="col-md-6">
 											<div class="project_content">
-												<h2 class="project_title">Project title</h2>
-												<p class="project_desc">Lorem ipsum dolor sit amet, consectetur
-													adipiscing elit. Fusce a auctor sem. Suspendisse egestas nulla eget
-													nunc commodo, et blandit ante tristique. Aliquam dignissim nulla
-													tellus, sed pellentesque libero pellentesque et. Donec nec sem
-													mattis, suscipit ligula id, porttitor tortor. Maecenas sed egestas
-													odio, vitae euismod nulla. Duis viverra blandit mi quis rhoncus.
-													Aenean vitae turpis et tortor elementum blandit.
+												<h2 class="project_title">Obcom.fr</h2>
+												<p class="project_desc">J'ai dirigé la remise au goût du jour du site de
+													la société Obcom.
 													<br>
-													<br>dignissim nulla tellus, sed pellentesque libero pellentesque et.
-													Donec nec sem mattis, suscipit ligula id, porttitor tortor. Maecenas
-													sed egestas odio, vitae euismod nulla. Duis viverra blandit mi quis
-													rhoncus. Aenean vitae turpis et tortor elementum blandit.</p>
+													<br>Le principal obstacle ici était de remonter dans les moteurs de
+													recherche. Ce projet m'a donné une rigueur d'optimisation du
+													chargement des pages Web, requis pour le SEO.</p>
 
 											</div>
 										</div>
-										<a class="ext_link" href="#"><i class="fa fa-external-link"></i></a>
+										<a class="ext_link" href="https://obcom.fr" target="_blank"><i
+												class="fa fa-external-link"></i></a>
 										<div style="clear:both"></div>
 									</div>
 								</figcaption>
@@ -1477,9 +1469,9 @@
 							<figure class="effect-milo">
 								<img src="http://placehold.it/280x222" alt="img11" width="282" height="222" />
 								<figcaption>
-									<span class="label">web design</span>
+									<span class="label">Website</span>
 									<div class="portfolio_button">
-										<h3>Project Title</h3>
+										<h3>Somovers.com</h3>
 										<a href=".work4" class="open_popup" data-effect="mfp-zoom-out">
 											<i class="hovicon effect-9 sub-b"><i class="fa fa-search"></i></i>
 										</a>
@@ -1493,22 +1485,16 @@
 										</div>
 										<div class="col-md-6">
 											<div class="project_content">
-												<h2 class="project_title">Project title</h2>
-												<p class="project_desc">Lorem ipsum dolor sit amet, consectetur
-													adipiscing elit. Fusce a auctor sem. Suspendisse egestas nulla eget
-													nunc commodo, et blandit ante tristique. Aliquam dignissim nulla
-													tellus, sed pellentesque libero pellentesque et. Donec nec sem
-													mattis, suscipit ligula id, porttitor tortor. Maecenas sed egestas
-													odio, vitae euismod nulla. Duis viverra blandit mi quis rhoncus.
-													Aenean vitae turpis et tortor elementum blandit.
+												<h2 class="project_title">Somovers.com</h2>
+												<p class="project_desc">Ce site vitrine a été créé pour mettre en avant
+													une application ciblée pour les sociétés de déménagement.
 													<br>
-													<br>dignissim nulla tellus, sed pellentesque libero pellentesque et.
-													Donec nec sem mattis, suscipit ligula id, porttitor tortor. Maecenas
-													sed egestas odio, vitae euismod nulla. Duis viverra blandit mi quis
-													rhoncus. Aenean vitae turpis et tortor elementum blandit.</p>
+													<br>Encore une fois, le défi ici a été de jongler avec certains mots
+													clés pour faire ressortir le site dans les moteurs de recherche.</p>
 											</div>
 										</div>
-										<a class="ext_link" href="#"><i class="fa fa-external-link"></i></a>
+										<a class="ext_link" href="https://somovers.com" target="_blank"><i
+												class="fa fa-external-link"></i></a>
 										<div style="clear:both"></div>
 									</div>
 								</figcaption>
@@ -1519,9 +1505,9 @@
 							<figure class="effect-milo">
 								<img src="http://placehold.it/280x222" alt="img11" width="282" height="222" />
 								<figcaption>
-									<span class="label">Mobile app</span>
+									<span class="label">Online Store</span>
 									<div class="portfolio_button">
-										<h3>Project Title</h3>
+										<h3>Clos Normand</h3>
 										<a href=".work5" class="open_popup" data-effect="mfp-zoom-out">
 											<i class="hovicon effect-9 sub-b"><i class="fa fa-search"></i></i>
 										</a>
@@ -1535,22 +1521,17 @@
 										</div>
 										<div class="col-md-6">
 											<div class="project_content">
-												<h2 class="project_title">Project title</h2>
-												<p class="project_desc">Lorem ipsum dolor sit amet, consectetur
-													adipiscing elit. Fusce a auctor sem. Suspendisse egestas nulla eget
-													nunc commodo, et blandit ante tristique. Aliquam dignissim nulla
-													tellus, sed pellentesque libero pellentesque et. Donec nec sem
-													mattis, suscipit ligula id, porttitor tortor. Maecenas sed egestas
-													odio, vitae euismod nulla. Duis viverra blandit mi quis rhoncus.
-													Aenean vitae turpis et tortor elementum blandit.
+												<h2 class="project_title">Clos Normand</h2>
+												<p class="project_desc">J'ai repris les rênes du site marchand de la
+													Pépinière du Clos Normand pour l'actualiser.
 													<br>
-													<br>dignissim nulla tellus, sed pellentesque libero pellentesque et.
-													Donec nec sem mattis, suscipit ligula id, porttitor tortor. Maecenas
-													sed egestas odio, vitae euismod nulla. Duis viverra blandit mi quis
-													rhoncus. Aenean vitae turpis et tortor elementum blandit.</p>
+													<br>La plus grosse difficulté était de travailler avec le framework
+													déjà en place : Prestashop. Certaines limitations m'ont empêché de
+													mettre à jour la version de Prestashop, me forçant à travailler avec
+													une base assez bancale. La combinaison d'une refonte graphique et de divers ajustements ont permis de relancer la vente en ligne de la Pépinière.</p>
 											</div>
 										</div>
-										<a class="ext_link" href="#"><i class="fa fa-external-link"></i></a>
+										<a class="ext_link" href="https://clos-normand.com" target="_blank"><i class="fa fa-external-link"></i></a>
 										<div style="clear:both"></div>
 									</div>
 								</figcaption>
@@ -1561,9 +1542,9 @@
 							<figure class="effect-milo">
 								<img src="http://placehold.it/280x222" alt="img11" width="282" height="222" />
 								<figcaption>
-									<span class="label">Logo Design</span>
+									<span class="label">Website</span>
 									<div class="portfolio_button">
-										<h3>Project Title</h3>
+										<h3>Atlantis Eco BTP</h3>
 										<a href=".work6" class="open_popup" data-effect="mfp-zoom-out">
 											<i class="hovicon effect-9 sub-b"><i class="fa fa-search"></i></i>
 										</a>
@@ -1577,22 +1558,13 @@
 										</div>
 										<div class="col-md-6">
 											<div class="project_content">
-												<h2 class="project_title">Project title</h2>
-												<p class="project_desc">Lorem ipsum dolor sit amet, consectetur
-													adipiscing elit. Fusce a auctor sem. Suspendisse egestas nulla eget
-													nunc commodo, et blandit ante tristique. Aliquam dignissim nulla
-													tellus, sed pellentesque libero pellentesque et. Donec nec sem
-													mattis, suscipit ligula id, porttitor tortor. Maecenas sed egestas
-													odio, vitae euismod nulla. Duis viverra blandit mi quis rhoncus.
-													Aenean vitae turpis et tortor elementum blandit.
+												<h2 class="project_title">Atlantis Eco BTP</h2>
+												<p class="project_desc">J'ai mené à bien la remise à zéro du site de cette entreprise.
 													<br>
-													<br>dignissim nulla tellus, sed pellentesque libero pellentesque et.
-													Donec nec sem mattis, suscipit ligula id, porttitor tortor. Maecenas
-													sed egestas odio, vitae euismod nulla. Duis viverra blandit mi quis
-													rhoncus. Aenean vitae turpis et tortor elementum blandit.</p>
+													<br>De l'aspect visuel à la structure du texte, ce nouveau site permet à l'entreprise de mettre en avant ses réalisations et son expertise.</p>
 											</div>
 										</div>
-										<a class="ext_link" href="#"><i class="fa fa-external-link"></i></a>
+										<a class="ext_link" href="https://www.atlantisecobtp.fr/" target="_blank"><i class="fa fa-external-link"></i></a>
 										<div style="clear:both"></div>
 									</div>
 								</figcaption>
