Updated project link

--- a/index.html
+++ b/index.html
@@ -1564,7 +1564,7 @@
 													<br>De l'aspect visuel à la structure du texte, ce nouveau site permet à l'entreprise de mettre en avant ses réalisations et son expertise.</p>
 											</div>
 										</div>
-										<a class="ext_link" href="https://www.atlantisecobtp.fr/" target="_blank"><i class="fa fa-external-link"></i></a>
+										<a class="ext_link" href="https://atlantisecobtp.fr/" target="_blank"><i class="fa fa-external-link"></i></a>
 										<div style="clear:both"></div>
 									</div>
 								</figcaption>
