--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <aside class="widget widget_contact">
                 <h2 class="widget-title">Contact Me</h2>
     
-                <form class="rsForm" action="php/mailsender.php" method="post">
+                <form class="rsForm" action="recaptcha.php" method="post" data-captcha="true">
                     <div class="input-field">
                         <label>Name</label>
                         <input type="text" name="rsName" value="">
@@ -1253,7 +1253,7 @@
                             <div class="section-box contact-form">
                                 <h3>Feel free to contact me</h3>
             
-                                <form class="rsForm" action="php/mailsender.php" method="post">
+                                <form class="rsForm" action="recaptcha.php" method="post" data-captcha="true">
                                     <div class="input-field">
                                         <label>Name</label>
                                         <input type="text" name="rsName" value="">
